--- a/package.json
+++ b/package.json
@@ -2,14 +2,18 @@
   "name": "blog-project",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://opulent-robot-v665p6pjqr6p25w7-5000.app.github.dev/",
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.2",
+    "@tanstack/react-query": "^5.28.8",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.2",
